correct the z-index stack

--- a/app/web-app/semantic/components/menu.css
+++ b/app/web-app/semantic/components/menu.css
@@ -2056,7 +2056,7 @@ Floated Menu / Item
 }
 .ui.menu.la-contextBar {
   top: 40px;
-  z-index: 3000;
+  z-index: 90;
   background-color: #d3dae3;
 }
 .ui.menu.la-contextBar .la-context-org {
